--- a/pages/index.html
+++ b/pages/index.html
@@ -77,7 +77,7 @@
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="https://cdn.discordapp.com/attachments/687417942496772117/985610013173239848/unknown.png" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Galo oficial da Nike, estilizado pelo artista Louis Vuitton, a escolha certa para quem quer uma luta estilosa, e com um belo canto.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-1">
@@ -112,7 +112,7 @@
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="https://cdn.discordapp.com/attachments/687417942496772117/985610070077362279/unknown.png" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Galo de Calça Azul, mestre na capoeira, ancião co-analítico da receita federal, para quem quer algo sólido.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-2">
@@ -123,7 +123,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title">Galo da Nike</h5>
+                                <h5 class="modal-title">Galo de Calça Azul</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
@@ -146,7 +146,7 @@
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="https://cdn.discordapp.com/attachments/687417942496772117/985609960215937034/unknown.png" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Galo Caipira de Botas, inspirado no "Gato de Botas", esse é o mais novo bi-campeão do TMRG (Torneio Mundial de Rinha de Galo).</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-3">
@@ -157,7 +157,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title">Galo da Nike</h5>
+                                <h5 class="modal-title">Galo Caipira de Botas</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
@@ -181,7 +181,7 @@
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="https://cdn.discordapp.com/attachments/687417942496772117/985617467420327946/unknown.png" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Galo de Penteado e Pistola, para aqueles que não se importam com jogos sujos, e estão disposto a fazer oque for preciso para vencer.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-4">
@@ -192,7 +192,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title">Galo da Nike</h5>
+                                <h5 class="modal-title">Galo de Penteado e Pistola</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
@@ -215,7 +215,7 @@
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="https://cdn.discordapp.com/attachments/687417942496772117/985620373389332480/unknown.png" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Galo Segurança, trabalho 4 anos como segurança de um bar, especializado nos mais diversos tipos de lutas, pronto para qualquer lugar e qualquer horário.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-5">
@@ -226,7 +226,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title">Galo da Nike</h5>
+                                <h5 class="modal-title">Galo Segurança</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
@@ -249,7 +249,7 @@
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="https://cdn.discordapp.com/attachments/687417942496772117/985617354874560573/unknown.png" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Galo Sniper, a mais nova moda do momento, com direito a traje completo, protegido e armado, um aliado empoderado, levara muitos troféus a sua casa.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-6">
@@ -260,7 +260,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title">Galo da Nike</h5>
+                                <h5 class="modal-title">Galo Sniper</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
@@ -284,7 +284,7 @@
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="https://cdn.discordapp.com/attachments/687417942496772117/985617113794379916/unknown.png" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Galo Gandalf, encarnado diretamente do grande universo de "The Lord of The Rings", está mais que pronto para utilizar suas mais variadas artimanhas na batalha.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-7">
@@ -294,7 +294,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title">Galo da Nike</h5>
+                                <h5 class="modal-title">Galo Gandalf</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
@@ -317,7 +317,7 @@
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="https://cdn.discordapp.com/attachments/687417942496772117/985616801989799996/unknown.png" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Galo Cantor, ganhador de diversos premios na musica sertaneja, conta com seu disco de ouro, agora ficou conhecido como a "Canção da Batalha".</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-8">
@@ -328,7 +328,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title">Galo da Nike</h5>
+                                <h5 class="modal-title">Galo Cantor</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
@@ -351,7 +351,7 @@
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="https://cdn.discordapp.com/attachments/687417942496772117/985628746042208356/unknown.png" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Galo Elegante, sem roupas, sem armas, apenas ele e suas penas. Foi faixa preta em karate 2 vezes, carrega nos obros 1 cinturão de ouro, um clássico lutador da luta pesada.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
 
@@ -363,7 +363,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title">Galo da Nike</h5>
+                                <h5 class="modal-title">Galo Elegante</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
