--- a/pages/index.html
+++ b/pages/index.html
@@ -73,7 +73,7 @@
         <div class="container">
 
           <div class="row">
-            <div class="col-md-3 col-sm-6 mb-4 ">
+            <div class="col-md-3 col-sm-6 mb-4 none-12 ">
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="https://cdn.discordapp.com/attachments/687417942496772117/985610013173239848/unknown.png" alt="Card image cap">
                 <div class="card-body">
@@ -107,7 +107,7 @@
               </div>
             </div>
 
-            <div class="col-md-3 col-sm-6 mb-4 ">
+            <div class="col-md-3 col-sm-6 mb-4 none-12">
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="https://cdn.discordapp.com/attachments/687417942496772117/985610070077362279/unknown.png" alt="Card image cap">
                 <div class="card-body">
@@ -142,7 +142,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3 col-sm-6 mb-4 ">
+            <div class="col-md-3 col-sm-6 mb-4 none-12">
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="https://cdn.discordapp.com/attachments/687417942496772117/985609960215937034/unknown.png" alt="Card image cap">
                 <div class="card-body">
@@ -177,7 +177,7 @@
               </div>
             </div>
 
-            <div class="col-md-3 col-sm-6 mb-4 ">
+            <div class="col-md-3 col-sm-6 mb-4 none-12">
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="https://cdn.discordapp.com/attachments/687417942496772117/985617467420327946/unknown.png" alt="Card image cap">
                 <div class="card-body">
@@ -211,7 +211,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3 col-sm-6 mb-4 ">
+            <div class="col-md-3 col-sm-6 mb-4 none-12">
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="https://cdn.discordapp.com/attachments/687417942496772117/985620373389332480/unknown.png" alt="Card image cap">
                 <div class="card-body">
@@ -245,7 +245,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3 col-sm-6 mb-4 ">
+            <div class="col-md-3 col-sm-6 mb-4 none-12">
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="https://cdn.discordapp.com/attachments/687417942496772117/985617354874560573/unknown.png" alt="Card image cap">
                 <div class="card-body">
@@ -280,7 +280,7 @@
               </div>
             </div>
 
-            <div class="col-md-3 col-sm-6 mb-4 ">
+            <div class="col-md-3 col-sm-6 mb-4 none-12">
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="https://cdn.discordapp.com/attachments/687417942496772117/985617113794379916/unknown.png" alt="Card image cap">
                 <div class="card-body">
@@ -313,7 +313,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3 col-sm-6 mb-4 ">
+            <div class="col-md-3 col-sm-6 mb-4 none-12">
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="https://cdn.discordapp.com/attachments/687417942496772117/985616801989799996/unknown.png" alt="Card image cap">
                 <div class="card-body">
@@ -347,7 +347,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3 col-sm-6 mb-4 ">
+            <div class="col-md-3 col-sm-6 mb-4 none-12">
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="https://cdn.discordapp.com/attachments/687417942496772117/985628746042208356/unknown.png" alt="Card image cap">
                 <div class="card-body">
