cores das cartas alteradas

--- a/pages/index.html
+++ b/pages/index.html
@@ -80,7 +80,7 @@
                   <p class="card-text">Galo oficial da Nike, estilizado pelo artista Louis Vuitton, a escolha certa para quem quer uma luta estilosa, e com um belo canto.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-1">
+                      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-1">
                         <i class="bi bi-eye-fill"></i>
                       </button>
                       <div class="modal" id="detalhes-galo-1" tabindex="-1">
@@ -115,7 +115,7 @@
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       
-                        <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-2">
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-2">
                           <i class="bi bi-eye-fill"></i>
                         </button>
                       
@@ -149,7 +149,7 @@
                   <p class="card-text">Galo Caipira de Botas, inspirado no "Gato de Botas", esse é o mais novo bi-campeão do TMRG (Torneio Mundial de Rinha de Galo).</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-3">
+                      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-3">
                         <i class="bi bi-eye-fill"></i>
                       </button>
 
@@ -184,7 +184,7 @@
                   <p class="card-text">Galo de Penteado e Pistola, para aqueles que não se importam com jogos sujos, e estão disposto a fazer oque for preciso para vencer.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-4">
+                      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-4">
                         <i class="bi bi-eye-fill"></i>
                       </button>
 
@@ -218,7 +218,7 @@
                   <p class="card-text">Galo Segurança, trabalho 4 anos como segurança de um bar, especializado nos mais diversos tipos de lutas, pronto para qualquer lugar e qualquer horário.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-5">
+                      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-5">
                         <i class="bi bi-eye-fill"></i>
                       </button>
 
@@ -252,7 +252,7 @@
                   <p class="card-text">Galo Sniper, a mais nova moda do momento, com direito a traje completo, protegido e armado, um aliado empoderado, levara muitos troféus a sua casa.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-6">
+                      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-6">
                         <i class="bi bi-eye-fill"></i>
                       </button>
 
@@ -287,7 +287,7 @@
                   <p class="card-text">Galo Gandalf, encarnado diretamente do grande universo de "The Lord of The Rings", está mais que pronto para utilizar suas mais variadas artimanhas na batalha.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-7">
+                      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-7">
                         <i class="bi bi-eye-fill"></i>
                       </button>
                       <div class="modal" id="detalhes-galo-7" tabindex="-1">
@@ -320,7 +320,7 @@
                   <p class="card-text">Galo Cantor, ganhador de diversos premios na musica sertaneja, conta com seu disco de ouro, agora ficou conhecido como a "Canção da Batalha".</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-8">
+                      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-8">
                         <i class="bi bi-eye-fill"></i>
                       </button>
 
@@ -355,7 +355,7 @@
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
 
-                      <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-9">
+                      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-9">
                         <i class="bi bi-eye-fill"></i>
                       </button>
 
