--- a/pages/index.html
+++ b/pages/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="../styles/styles.css">
   </head>
 
-  <body>
+  <body id="fundo">
 
     <header>
       <div class="collapse bg-dark" id="navbarHeader">
@@ -69,7 +69,7 @@
           </p>
         </div>
       </section>
-      <div class="album py-5 bg-light">
+      <div class="album py-5 bg-light" id="fundocarta">
         <div class="container">
 
           <div class="row">
