--- a/pages/index.html
+++ b/pages/index.html
@@ -91,7 +91,11 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                <p>Modal body text goes here.</p>
+                                <p><b>Força:</b> 5 <br> 
+                                  <b>Defesa:</b> 3 <br>
+                                  <b>Velocidade:</b> 7 <br>
+                                  <b>Inteligência:</b> 5 <br>
+                                  <b>Ataque Especial:</b> Pezada de Jordan</p>
                             </div>
                             <div class="modal-footer">
                                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Fechar</button>
@@ -127,7 +131,11 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                <p>Modal body text goes here.</p>
+                                <p><b>Força:</b> 4 <br>
+                                  <b>Defesa:</b> 5 <br>
+                                  <b>Velocidade:</b> 5 <br>
+                                  <b>Inteligência:</b> 6 <br>
+                                  <b>Ataque Especial:</b> Rasteira Fulminante</p>
                             </div>
                             <div class="modal-footer">
                                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Fechar</button>
@@ -161,7 +169,11 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                <p>Modal body text goes here.</p>
+                                <p><b>Força:</b> 7 <br>
+                                  <b>Defesa:</b> 2 <br>
+                                  <b>Velocidade:</b> 7 <br>
+                                  <b>Inteligência:</b> 4 <br>
+                                  <b>Ataque Especial:</b> Voadora Alucinante</p>
                             </div>
                             <div class="modal-footer">
                                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Fechar</button>
@@ -196,7 +208,11 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                <p>Modal body text goes here.</p>
+                                <p><b>Força:</b> 4 <br>
+                                  <b>Defesa:</b> 2 <br>
+                                  <b>Velocidade:</b> 6 <br>
+                                  <b>Inteligência:</b> 8 <br>
+                                  <b>Ataque Especial:</b> Cobrança do Agiota</p>
                             </div>
                             <div class="modal-footer">
                                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Fechar</button>
@@ -230,7 +246,11 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                <p>Modal body text goes here.</p>
+                                <p><b>Força:</b> 7 <br>
+                                  <b>Defesa:</b> 7 <br>
+                                  <b>Velocidade:</b> 2 <br>
+                                  <b>Inteligência:</b> 4 <br>
+                                  <b>Ataque Especial:</b> Muralha Colossal</p>
                             </div>
                             <div class="modal-footer">
                                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Fechar</button>
@@ -264,7 +284,11 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                <p>Modal body text goes here.</p>
+                                <p><b>Força:</b> 10 <br>
+                                  <b>Defesa:</b> 3 <br>
+                                  <b>Velocidade:</b> 1 <br>
+                                  <b>Inteligência:</b> 6 <br>
+                                  <b>Ataque Especial:</b> A Morte Branca</p>
                             </div>
                             <div class="modal-footer">
                                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Fechar</button>
@@ -298,7 +322,11 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                <p>Modal body text goes here.</p>
+                                <p><b>Força:</b> 2 <br>
+                                  <b>Defesa:</b> 3 <br>
+                                  <b>Velocidade:</b> 5 <br>
+                                  <b>Inteligência:</b> 10 <br>
+                                  <b>Ataque Especial:</b> Magia dos Ancestrais Galináceos</p>
                             </div>
                             <div class="modal-footer">
                                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Fechar</button>
@@ -332,7 +360,11 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                <p>Modal body text goes here.</p>
+                                <p><b>Força:</b> 5 <br>
+                                  <b>Defesa:</b> 3 <br>
+                                  <b>Velocidade:</b> 6 <br>
+                                  <b>Inteligência:</b> 6 <br>
+                                  <b>Ataque Especial:</b> Canto do Amanhecer</p>
                             </div>
                             <div class="modal-footer">
                                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Fechar</button>
@@ -367,7 +399,11 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                <p>Modal body text goes here.</p>
+                                <p><b>Força:</b> 9 <br>
+                                  <b>Defesa:</b> 2 <br>
+                                  <b>Velocidade:</b> 5 <br>
+                                  <b>Inteligência:</b> 4 <br>
+                                  <b>Ataque Especial:</b> Pena de Ferro</p>
                             </div>
                             <div class="modal-footer">
                                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Fechar</button>
@@ -394,10 +430,8 @@
     <footer class="text-muted">
       <div class="container">
         <p class="float-right">
-          <a href="#">Back to top</a>
+          <a href="#">Voltar ao topo da página</a>
         </p>
-        <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-        <p>New to Bootstrap? <a href="../../">Visit the homepage</a> or read our <a href="../../getting-started/">getting started guide</a>.</p>
       </div>
     </footer>
 
