background colors changed and navbarbutton it's working now

--- a/pages/index.html
+++ b/pages/index.html
@@ -27,32 +27,40 @@
   <body id="fundo">
 
     <header>
-      <div class="collapse bg-dark" id="navbarHeader">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-8 col-md-7 py-4">
-              <h4 class="text-white">About</h4>
-              <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
-            </div>
-            <div class="col-sm-4 offset-md-1 py-4">
-              <h4 class="text-white">Contact</h4>
-              <ul class="list-unstyled">
-                <li><a href="#" class="text-white">Follow on Twitter</a></li>
-                <li><a href="#" class="text-white">Like on Facebook</a></li>
-                <li><a href="#" class="text-white">Email me</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="navbar navbar-dark bg-dark box-shadow">
+      
+      <div class="navbar navbar-dark bg-primary box-shadow">
         <div class="container d-flex justify-content-between">
           <a href="#" class="navbar-brand d-flex align-items-center">
             <img class="icon" src="../logo.png" alt="...">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon">
+              
+            </span>
           </button>
+        </div>
+      </div>
+      <div class="bg-primary collapse show" id="navbarHeader" style> 
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-8 col-md-7 py-4">
+              <h4 class="text-white">Sobre</h4>
+              <p class="text-white">O Centro de Vendas de Galos de Rinhas (CVGR) é responsável pela maior distribuição de galos de rinha do Brasil. 
+                Mobilizamos recursos de Tecnologia da Informação em prol da racionalização e agilização dos processos organizacionais de torneios. 
+                Além disso, o CVGR é um órgão de apoio a Governança Animal na UFJF, auxiliando o Comitê de Governança Animal da instituição e promover o alinhamento 
+                das atividades de torneios a estratégia organizacional, propor políticas e normas acerca da utilização dos recursos digitais e monitorar e avaliar a 
+                execução de ações e a gestão dos torneios na UFJF.
+                </p>
+            </div>
+            <div class="col-sm-4 offset-md-1 py-4">
+              <h4 class="text-white">Contate-nos</h4>
+              <ul class="list-unstyled">
+                <li><a href="#" class="text-white">(45) 985391-424936</a></li>
+                <li><a href="https://www.google.com.br/maps/place/Av.+Paran%C3%A1,+3471+-+Jardim+Itamaraty,+Foz+do+Igua%C3%A7u+-+PR,+85863-720/data=!4m2!3m1!1s0x94f69066b9527091:0xdd82128db3d48d4f?sa=X&ved=2ahUKEwj-w4mypLL4AhWnBbkGHULFCDIQ8gF6BAgCEAE"
+                   class="text-white">Localização</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </header>
@@ -63,10 +71,10 @@
         <div class="container">
           <h1 class="jumbotron-heading">Bem vindo!</h1>
           <p class="lead text-muted">Escolha entre centenas de galos preparados para se enfrentar no campo de batalha. As mais diversas raças, habilidades, proficiencias e skins personalizadas.</p>
-          <p>
+          <!--<p>
             <a href="sobre.html" class="btn btn-primary my-2 m-2 p-3">Nos conheça melhor</a>
             <a href="locs.html" class="btn btn-secondary my-2 m-2 p-3">Localização dos torneios</a>
-          </p>
+          </p>-->
         </div>
       </section>
       <div class="album py-5 bg-light" id="fundocarta">
@@ -193,7 +201,7 @@
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="https://cdn.discordapp.com/attachments/687417942496772117/985617467420327946/unknown.png" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">Galo de Penteado e Pistola, para aqueles que não se importam com jogos sujos, e estão disposto a fazer oque for preciso para vencer.</p>
+                  <p class="card-text">Galo de Penteado e Pistola, para aqueles que não se importam com jogos sujos, e estão disposto a fazer o que for preciso para vencer.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#detalhes-galo-4">
