--- a/pages/locs.html
+++ b/pages/locs.html
@@ -34,7 +34,7 @@
                 </div>
               </div>
             </div>
-            <div class="navbar navbar-dark bg-dark box-shadow">
+            <div class="navbar navbar-dark bg-primary box-shadow">
               <div class="container d-flex justify-content-between">
                 <a href="#" class="navbar-brand d-flex align-items-center">
                   <img class="icon" src="../logo.png" alt="...">
